--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,127 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - Say Anything</title>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="/assets/img/favicon/twitter.jpg?h=deceb7758f08f15567c331efa75bf038">
+    <meta property="og:description" content="Say anything you want here.">
+    <meta property="og:image" content="/assets/img/favicon/og.jpg?h=6796770e0ac064e2ab611ff856d256a7">
+    <meta name="description" content="Say Anything you want here. Now refactored and open-source!">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Say Anything">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/message16.png?h=d092e5d3a3c301b5fd90be90133b977c">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/message32.png?h=310aaf1ddfc78815d1c6572fce81287f">
+    <link rel="icon" type="image/png" sizes="180x180" href="/assets/img/favicon/message180.png?h=9587661f57d948390e88a10030de4750">
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/message192.png?h=2278f0ea9234281bff7b12df9adb9d8b">
+    <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/message512.png?h=d628d7d0433661673d575d55bc12aa38">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=e9eb53d0e6b5da5afca49f5a852f46d1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
+        <div class="container"><a class="navbar-brand logo" href="/index.html">Say Anything</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div
+                class="collapse navbar-collapse" id="navbarNav">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/index.html">Say</a></li>
+                </ul>
+        </div>
+        </div>
+    </nav>
+    <main class="page lanidng-page">
+        <section class="portfolio-block block-intro" style="height: 300px;">
+            <div class="container">
+                <div class="about-me" style="margin-bottom: 5px;">
+                    <p style="font-size: 49px;">Welcome to the new Say Anything</p>
+                    <p style="font-size: 28px;">Refactored, Open-source and fast!</p>
+                </div>
+            </div>
+        </section>
+        <section class="portfolio-block photography">
+            <div class="container">
+                <div class="row no-gutters">
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"></a></div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"></a></div>
+                </div>
+            </div>
+        </section>
+        <section class="portfolio-block call-to-action border-bottom" style="padding: 50px 0px;padding-top: 110px;padding-bottom: 40px;">
+            <p class="text-center text-dark d-flex float-none d-xl-flex justify-content-center justify-content-xl-center align-items-xl-center">Support Us</p>
+            <div class="container">
+                <div class="d-flex justify-content-center align-items-center content"><style>.bmc-button img{height: 34px !important;width: 35px !important;margin-bottom: 1px !important;box-shadow: none !important;border: none !important;vertical-align: middle !important;}.bmc-button{padding: 7px 15px 7px 10px !important;line-height: 35px !important;height:51px !important;text-decoration: none !important;display:inline-flex !important;color:#ffffff !important;background-color:#FF813F !important;border-radius: 5px !important;border: 1px solid transparent !important;padding: 7px 15px 7px 10px !important;font-size: 28px !important;letter-spacing:0.6px !important;box-shadow: 0px 1px 2px rgba(190, 190, 190, 0.5) !important;-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;margin: 0 auto !important;font-family:'Cookie', cursive !important;-webkit-box-sizing: border-box !important;box-sizing: border-box !important;}.bmc-button:hover, .bmc-button:active, .bmc-button:focus {-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;text-decoration: none !important;box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;opacity: 0.85 !important;color:#ffffff !important;}</style><link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet"><a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/muurilo"><img src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg" alt="Buy me a coffee"><span style="margin-left:5px;font-size:28px !important;">Buy me a coffee</span></a></div>
+            </div>
+        </section>
+        <section class="portfolio-block skills">
+            <div class="container">
+                <div class="heading">
+                    <h2>New features<br></h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-android-phone-portrait"></i></div>
+                            <div class="card-body">
+                                <h3 class="card-title">Responsive Design</h3>
+                                <p class="card-text">Now our design adapts to any device<br></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-social-github"></i></div>
+                            <div class="card-body">
+                                <h3 class="card-title">Open Source</h3>
+                                <p class="card-text">Our website is now completely open source<br></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-locked"></i></div>
+                            <div class="card-body">
+                                <h3 class="card-title">Without Exploits</h3>
+                                <p class="card-text">Evil Factory will not hack us!<br></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <section class="portfolio-block website gradient">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-12 col-lg-5 offset-lg-1 text">
+                    <h3>Who we are?<br></h3>
+                    <p>We are a parody of the sayanything.ml site which is full of exploits, we fix them all and our site is very improved<br></p>
+                </div>
+                <div class="col-md-12 col-lg-5">
+                    <div class="portfolio-laptop-mockup">
+                        <div class="screen">
+                            <div class="screen-content" style="background-image: url(&quot;/assets/img/say.png?h=10bb26317e5e7e280d791d14af1c0179&quot;);"></div>
+                        </div>
+                        <div class="keyboard"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="page-footer">
+        <div class="container">
+            <div class="links"><a href="mailto:muurilo@protonmail.com">Contact me</a><a href="https://github.com/Muurilo?tab=repositories" target="_blank">Projects</a></div>
+            <div class="social-icons"><a href="https://github.com/Muurilo/SayAnything" target="_blank"><i class="icon ion-social-github"></i></a></div>
+        </div>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
 </body>
 
 </html>
