--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="180x180" href="/assets/img/favicon/message180.png?h=9587661f57d948390e88a10030de4750">
     <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/message192.png?h=2278f0ea9234281bff7b12df9adb9d8b">
     <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/message512.png?h=d628d7d0433661673d575d55bc12aa38">
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=e9eb53d0e6b5da5afca49f5a852f46d1">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=e273eb9808b5b398ee096895ee75b70d">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
@@ -29,7 +29,7 @@
             <div
                 class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/index.html">Say</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/say.html">Say</a></li>
                 </ul>
         </div>
         </div>
@@ -122,6 +122,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
+    <script src="/assets/js/script.min.js?h=aef4233dce0b878f77696186ba921bd4"></script>
 </body>
 
 </html>
