--- a/public/say.html
+++ b/public/say.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="about-me" style="margin-bottom: 5px;">
                     <p style="font-size: 49px;">Say Anything you want here!</p>
-                    <p class="say-content" style="font-size: 28px;min-width: 50%;min-height: 50%;"></p>
+                    <p class="say-content" style="font-size: 28px;min-width: 50%;min-height: 50%;">Say here</p>
                 </div>
             </div>
         </section>
@@ -56,7 +56,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-    <script src="/assets/js/script.min.js?h=aef4233dce0b878f77696186ba921bd4"></script>
+    <script src="/assets/js/script.min.js?h=65e026fb1f6857bb34ed4903741c722c"></script>
 </body>
 
 </html>
