--- a/public/say.html
+++ b/public/say.html
@@ -5,18 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Say here - Say Anything</title>
+    <meta name="twitter:image" content="/assets/img/favicon/twitter.webp?h=0ec0bc82197b95debed7fa2be79229a5">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="/assets/img/favicon/twitter.jpg?h=deceb7758f08f15567c331efa75bf038">
     <meta property="og:description" content="Say anything you want here.">
-    <meta property="og:image" content="/assets/img/favicon/og.jpg?h=6796770e0ac064e2ab611ff856d256a7">
     <meta name="description" content="Say Anything you want here. Now refactored and open-source!">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Say Anything">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/message16.png?h=d092e5d3a3c301b5fd90be90133b977c">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/message32.png?h=310aaf1ddfc78815d1c6572fce81287f">
-    <link rel="icon" type="image/png" sizes="180x180" href="/assets/img/favicon/message180.png?h=9587661f57d948390e88a10030de4750">
-    <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/message192.png?h=2278f0ea9234281bff7b12df9adb9d8b">
-    <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/message512.png?h=d628d7d0433661673d575d55bc12aa38">
+    <meta property="og:image" content="/assets/img/favicon/og.webp?h=ef17a0da696cab9f58e6a3ec13b6580b">
+    <link rel="icon" type="image/webp" sizes="16x16" href="/assets/img/favicon/message16.webp?h=bb1ad819b2179f93822fccd6600842eb">
+    <link rel="icon" type="image/webp" sizes="32x32" href="/assets/img/favicon/message32.webp?h=3c1932862cfa39a9f9506ccd6ed0df30">
+    <link rel="icon" type="image/webp" sizes="180x180" href="/assets/img/favicon/message180.webp?h=265701a31ec7b6d1ca3bd1ce75beea80">
+    <link rel="icon" type="image/webp" sizes="192x192" href="/assets/img/favicon/message192.webp?h=daf2305190e69fde1e622fbc57fa4bb2">
+    <link rel="icon" type="image/webp" sizes="512x512" href="/assets/img/favicon/message512.webp?h=0de08c12d7d2aef84db58b927c5183b7">
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=98d02c9f4849dad92bf0203af04d7cd3">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
