Align header, fix OG

--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Say Anything</title>
-    <meta name="twitter:image" content="/assets/img/favicon/twitter.webp?h=0ec0bc82197b95debed7fa2be79229a5">
+    <meta name="twitter:image" content="/assets/img/twitter.jpg?h=d77322a8366d8301e7853ed260e05ca4">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:description" content="Say anything you want here.">
     <meta name="description" content="Say Anything you want here. Now refactored and open-source!">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Say Anything">
-    <meta property="og:image" content="/assets/img/favicon/og.webp?h=ef17a0da696cab9f58e6a3ec13b6580b">
+    <meta property="og:image" content="/assets/img/og.jpg?h=2076cfb8676f44340e5b4e359f786868">
     <link rel="icon" type="image/webp" sizes="16x16" href="/assets/img/favicon/message16.webp?h=bb1ad819b2179f93822fccd6600842eb">
     <link rel="icon" type="image/webp" sizes="32x32" href="/assets/img/favicon/message32.webp?h=3c1932862cfa39a9f9506ccd6ed0df30">
     <link rel="icon" type="image/webp" sizes="180x180" href="/assets/img/favicon/message180.webp?h=265701a31ec7b6d1ca3bd1ce75beea80">
     <link rel="icon" type="image/webp" sizes="192x192" href="/assets/img/favicon/message192.webp?h=daf2305190e69fde1e622fbc57fa4bb2">
     <link rel="icon" type="image/webp" sizes="512x512" href="/assets/img/favicon/message512.webp?h=0de08c12d7d2aef84db58b927c5183b7">
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=98d02c9f4849dad92bf0203af04d7cd3">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=e157e0ad7764ab31f1dbdf810f9ca2a7">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
